--- a/vuejs-tailwindcss-portfolio/package.json
+++ b/vuejs-tailwindcss-portfolio/package.json
@@ -8,20 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@tailwindcss/forms": "^0.5.2",
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/cli-plugin-eslint": "^5.0.4",
     "@vue/cli-plugin-router": "^5.0.4",
-    "axios": "1.1.3",
+    "axios": "^1.1.3",
+    "bootstrap-vue-3": "^0.4.8",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.6",
     "feather-icons": "^4.28.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.1.0",
     "postcss-preset-env": "^7.6.0",
-    "vue": "^3.2.35",
     "vue-backtotop": "^1.6.1",
-    "vue-router": "^4.0.0-0",
-    "vue3-autocounter": "^1.0.6"
+    "vue-router": "^4.0.13",
+    "vue3-autocounter": "^1.0.6",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.4",
