--- a/vuejs-tailwindcss-portfolio/package.json
+++ b/vuejs-tailwindcss-portfolio/package.json
@@ -14,27 +14,30 @@
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/cli-plugin-eslint": "^5.0.4",
     "@vue/cli-plugin-router": "^5.0.4",
-    "axios": "^1.1.3",
+    "axios": "1.1.3",
     "bootstrap-vue-3": "^0.4.8",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.6",
     "feather-icons": "^4.28.0",
+    "jwt-decode": "3.1.2",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.1.0",
     "postcss-preset-env": "^7.6.0",
     "vue-backtotop": "^1.6.1",
     "vue-router": "^4.0.13",
     "vue3-autocounter": "^1.0.6",
-    "vuex": "^4.0.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex": "4.0.2",
+    "vuex-persistedstate": "4.1.0"
   },
   "devDependencies": {
+    "@babel/core": "7.20.2",
+    "@babel/eslint-parser": "7.19.1",
     "@vue/cli-service": "~5.0.4",
     "@vue/compiler-sfc": "^3.2.35",
     "autoprefixer": "^10.4.7",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.5.0",
-    "eslint-plugin-vue": "^7.0.0",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.32.0",
+    "eslint-plugin-vue": "7.20.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
     "vue-cli-plugin-tailwind": "3.0.0"
