--- a/vuejs-tailwindcss-portfolio/package.json
+++ b/vuejs-tailwindcss-portfolio/package.json
@@ -26,6 +26,7 @@
     "vue-backtotop": "^1.6.1",
     "vue-router": "^4.0.13",
     "vue3-autocounter": "^1.0.6",
+    "vue3-carousel": "0.2.5",
     "vuex": "4.0.2",
     "vuex-persistedstate": "4.1.0"
   },
