--- a/VueApi/src/main/resources/application.properties
+++ b/VueApi/src/main/resources/application.properties
@@ -12,3 +12,10 @@ logging.level.com.ssafy.vue.mappers=TRACE
 #mapper location settings
 mybatis.type-aliases-package=com.ssafy.vue.model
 mybatis.mapper-locations=classpath:mappers/**/*.xml
+
+# window
+file.path=C:/0_SSAFY/upload
+
+#File Upload size Setting
+spring.servlet.multipart.max-file-size=25MB
+spring.servlet.multipart.max-request-size=25MB
