--- a/vuejs-tailwindcss-portfolio/package.json
+++ b/vuejs-tailwindcss-portfolio/package.json
@@ -14,6 +14,8 @@
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/cli-plugin-eslint": "^5.0.4",
     "@vue/cli-plugin-router": "^5.0.4",
+    "@vue/reactivity": "3.2.45",
+    "@vue/runtime-core": "3.2.45",
     "axios": "1.1.3",
     "bootstrap-vue-3": "^0.4.8",
     "core-js": "^3.6.5",
@@ -23,6 +25,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.1.0",
     "postcss-preset-env": "^7.6.0",
+    "vue-awesome-paginate": "1.1.4",
     "vue-backtotop": "^1.6.1",
     "vue-router": "^4.0.13",
     "vue3-autocounter": "^1.0.6",
