--- a/vuejs-tailwindcss-portfolio/package.json
+++ b/vuejs-tailwindcss-portfolio/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 8081",
+    "serve": "vue-cli-service serve --port 8080",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -32,6 +32,7 @@
     "vue3-carousel": "0.2.5",
     "vuejs-paginate": "^2.1.0",
     "vuex": "4.0.2",
+    "vuex-pathify": "^3.0.0-beta",
     "vuex-persistedstate": "4.1.0"
   },
   "devDependencies": {
