--- a/VueApi/pom.xml
+++ b/VueApi/pom.xml
@@ -3,6 +3,40 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<oauth2>
+    <user>
+        <github>
+            <client-id>6c34d9a6903231c5a301</client-id>
+            <client-secret>${비밀키}</client-secret>
+            <redirect-uri>http://localhost:8080/redirect/oauth</redirect-uri>
+        </github>
+        <google>
+            <client-id>54767115914-gcla0mork6h3156h4qcutjerm0mdf4fu.apps.googleusercontent.com</client-id>
+            <client-secret>${비밀키}</client-secret>
+            <redirect-uri>http://localhost:8080/redirect/oauth</redirect-uri>
+        </google>
+        <naver>
+            <client-id>sCfhQHgPVQFFf8RTGjVe</client-id>
+            <client-secret>${비밀키}</client-secret>
+            <redirect-uri>http://localhost:8080/redirect/oauth</redirect-uri>
+        </naver>
+    </user>
+    <provider>
+        <github>
+            <token-uri>https://github.com/login/oauth/access_token</token-uri>
+            <user-info-uri>https://api.github.com/user</user-info-uri>
+        </github>
+        <google>
+            <token-uri>https://www.googleapis.com/oauth2/v4/token</token-uri>
+            <user-info-uri>https://www.googleapis.com/oauth2/v3/userinfo</user-info-uri>
+        </google>
+        <naver>
+            <token-uri>https://nid.naver.com/oauth2.0/token</token-uri>
+            <user-info-uri>https://openapi.naver.com/v1/nid/me</user-info-uri>
+        </naver>
+    </provider>
+</oauth2>
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
